Bug 1191063 - Followup comments. r=me DONTBUILD